--- a/_layouts/browse.html
+++ b/_layouts/browse.html
@@ -20,11 +20,11 @@ custom-foot: js/browse-js.html
     <div class="col-md-2">
         <div class="dropdown">
             <button class="btn btn-secondary mt-1 dropdown-toggle" type="button" id="browseSortButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Sort by <span class="font-weight-bold" id="sortFilter">Random</span>
+                Ordenado por <span class="font-weight-bold" id="sortFilter">Orden Aleatorio</span>
             </button>
             <div class="dropdown-menu browse-sort-menu" aria-labelledby="browseSortButton">
-                <button class="dropdown-item browse-sort-item active" data-filter="random">Random</button>
-                <button class="dropdown-item browse-sort-item" data-filter="title">Title</button>
+                <button class="dropdown-item browse-sort-item active" data-filter="random">Orden Aleatorio</button>
+                <button class="dropdown-item browse-sort-item" data-filter="title">Título</button>
                 {% assign sort_options = site.data.config-browse | where_exp: 'i','i.sort_name != nil' %}
                 {% for o in sort_options %}
                 <button class="dropdown-item browse-sort-item" data-filter="{{ o.field | escape }}">{{ o.sort_name }}</button>
