--- a/_includes/feature/pdf.html
+++ b/_includes/feature/pdf.html
@@ -3,14 +3,14 @@
     Item PDF embed from objectid or external link.
     This include adds a PDF embed to the page using html5 "object" element.
 
-    E.G. --> {% include feature/pdf.html objectid="demo_002" %}
+    E.G. --> {% include feature/pdf.html objectid="omac_01" %}
 
     It requires an "objectid" with the include, which is used to find the object details. Alternatively, a URL to an external pdf can be used in "objectid".
     By default no height is necessary as it uses 1x1 Bootstrap ratio style, https://getbootstrap.com/docs/5.1/helpers/ratio/
 
     Options: 
     - "objectid" = several options below (required)
-        1. an objectid of a PDF item in this collection, e.g. "demo_004"
+        1. an objectid of a PDF item in this collection, e.g. "omac_4"
         2. an external link to a PDF file hosted elsewhere, e.g. "https://www.lib.uidaho.edu/digital/pdfs/cloudtypes.pdf"   
         3. a relative link to a PDF file somewhere else in this repository, e.g. "/assets/pdfs/sometrees.pdf"
     - "caption" = by default the figure include automatically adds the title of the item from your metadata. The caption option allows you to manually add a different caption, or give the value false for none. (optional)
