--- a/_layouts/browse.html
+++ b/_layouts/browse.html
@@ -25,6 +25,7 @@ custom-foot: js/browse-js.html
             <div class="dropdown-menu browse-sort-menu" aria-labelledby="browseSortButton">
                 <button class="dropdown-item browse-sort-item active" data-filter="random">Orden Aleatorio</button>
                 <button class="dropdown-item browse-sort-item" data-filter="title">Título</button>
+                <button class="dropdown-item browse-sort-item" data-filter="date">Fecha</button>
                 {% assign sort_options = site.data.config-browse | where_exp: 'i','i.sort_name != nil' %}
                 {% for o in sort_options %}
                 <button class="dropdown-item browse-sort-item" data-filter="{{ o.field | escape }}">{{ o.sort_name }}</button>
