--- a/_includes/index/time.html
+++ b/_includes/index/time.html
@@ -8,9 +8,9 @@
 {%- assign date-range = clean-years | remove: " " | split: ";" | uniq | sort  -%}
 <div class="card mb-3">
   <div class="card-body">
-    <h5 class="card-title">Time Span</h5>
+    <h5 class="card-title">Espacio de tiempo</h5>
     <p class="card-text h5">{{ date-range | first }} to {{ date-range | last }}
-      <br/><a href="{{ '/timeline.html' | relative_url }}" class="btn btn-sm btn-outline-secondary mt-2">View Timeline</a>
+      <br/><a href="{{ '/timeline.html' | relative_url }}" class="btn btn-sm btn-outline-secondary mt-2">Ver Línea de Tiempo</a>
     </p>
   </div>
 </div>
