--- a/_layouts/item.html
+++ b/_layouts/item.html
@@ -15,7 +15,7 @@ gallery: true
     <h2 id="item-title" class="mb-3"></h2>
 
     <div id="loading" class="text-center">
-        <div class="spinner-border text-secondary" role="status"><span class="visually-hidden">Loading...</span></div>
+        <div class="spinner-border text-secondary" role="status"><span class="visually-hidden">Cargando...</span></div>
     </div>
 
     <div class="row justify-content-center">
