--- a/_includes/index/carousel.html
+++ b/_includes/index/carousel.html
@@ -13,7 +13,7 @@
     - "header" = card header text in bar above card content (optional)
     - "max" = maximum images selected for slide show (optional, default 9. Do not make too big!)
     - "btn-color" - a bootstrap color class to theme the buttons. Can be any bootstrap template color (e.g. info, success) or outline (e.g. outline-info, outline-success), including colors created in config-theme-colors. (optional, default "primary")
-    - "btn-text" - the label used in the link btn to view the carousel item (optional, default "View Item")
+    - "btn-text" - the label used in the link btn to view the carousel item (optional, default "Ver Elemento")
     
 {%- endcomment -%}
 
@@ -29,7 +29,7 @@
 
 {%- assign carousel-max = include.max | default: 9 -%}
 {%- assign btn-color = include.btn-color | default: "primary" -%}
-{%- assign btn-text = include.btn-text | default: "View Item" -%}
+{%- assign btn-text = include.btn-text | default: "Ver Elemento" -%}
 
 {%- comment -%}
     Set up carousel div
