Update4 time.html

--- a/_includes/index/time.html
+++ b/_includes/index/time.html
@@ -9,7 +9,7 @@
 <div class="card mb-3">
   <div class="card-body">
     <h5 class="card-title">Espacio de tiempo</h5>
-    <p class="card-text h5">{{ date-range | first }} to {{ date-range | last }}
+    <p class="card-text h5">{{ date-range | first }} a {{ date-range | last }}
       <br/><a href="{{ '/timeline.html' | relative_url }}" class="btn btn-sm btn-outline-secondary mt-2">Ver Línea de Tiempo</a>
     </p>
   </div>
