--- a/_includes/js/item-js.html
+++ b/_includes/js/item-js.html
@@ -48,30 +48,30 @@ function displayItem(record, prev_id, next_id, compound_object) {
     function addItem(item) {
         if (item.format.includes('image')) {
             itemDisplay = '<a class="spotlight gallery-img" data-download="true" href="' + findFileLink(item) + '"><img class="img-fluid" src="' + findFileLink(item) + '" alt="' + item.title + '">';
-            itemDisplay += record.format.includes('multiple') ? '</a>' : '<div><small class="text-dark">Click to view full screen</small></div></a>';
+            itemDisplay += record.format.includes('multiple') ? '</a>' : '<div><small class="text-dark">Haga clic para ver en pantalla completa</small></div></a>';
             itemDownload = '<a href="' + findFileLink(item) + '" target="_blank" rel="noopener" class="btn btn-outline-primary" title="Object download">Download ' + item.format.split("/").pop().toUpperCase() + '</a>';
         } else if (item.format.includes('pdf')) {
             itemDisplay = '<div class="ratio ratio-4x3"><object title="PDF file of ' + item.title + '" data="' + findFileLink(item) + '" type="application/pdf" width="100%"><p>The PDF is not rendering in your browser. Please use the button below to download the PDF.</p></object></div>';
-            itemDownload = '<a href="' + findFileLink(item) + '" target="_blank" rel="noopener" class="btn btn-outline-primary" title="Object download">Download PDF</a>';
+            itemDownload = '<a href="' + findFileLink(item) + '" target="_blank" rel="noopener" class="btn btn-outline-primary" title="Object download">Descargar PDF</a>';
         } else if (item.format.includes('audio')) {
             itemDisplay = '<audio controls class="w-100"><source src="' + findFileLink(item) + '">Your browser does not support the audio element. Please <a href="' + findFileLink(item) + '">download the audio file</a>.</audio>';
             itemDownload = '<a href="' + findFileLink(item) + '" target="_blank" rel="noopener" class="btn btn-outline-primary" title="Object download">Download ' + item.format.split("/").pop().toUpperCase() + '</a>';
         } else if (item.youtubeid) {
             itemDisplay = '<div class="ratio ratio-16x9"><iframe title="video embed ' + item.title + '" src="https://www.youtube-nocookie.com/embed/' + item.youtubeid + '?rel=0&modestbranding=1" allowfullscreen></iframe></div>';
-            itemDownload = '<a href="https://youtu.be/' + item.youtubeid + '" target="_blank" rel="noopener" class="btn btn-outline-primary" title="Object download">View on YouTube</a>';
+            itemDownload = '<a href="https://youtu.be/' + item.youtubeid + '" target="_blank" rel="noopener" class="btn btn-outline-primary" title="Object download">Ver en YouTube</a>';
         } else if (item.vimeoid) {
             itemDisplay = '<div class="ratio ratio-16x9"><iframe title="video embed ' + item.title + '"src="https://player.vimeo.com/video/' + item.vimeoid + '" allowfullscreen></iframe></div>';
-            itemDownload = '<a href="https://vimeo.com/' + item.vimeoid + '" target="_blank" rel="noopener" class="btn btn-outline-primary" title="Object download">View on Vimeo</a>';
+            itemDownload = '<a href="https://vimeo.com/' + item.vimeoid + '" target="_blank" rel="noopener" class="btn btn-outline-primary" title="Object download">Ver en Vimeo</a>';
         } else if (item.format.includes('video')) {
             itemDisplay = '<video controls class="w-100"><source src="' + findFileLink(item) + '">Your browser does not support the video tag. Please <a href="' + findFileLink(item) + '">download the video file</a>.</video>';
             itemDownload = '<a href="' + findFileLink(item) + '" target="_blank" rel="noopener" class="btn btn-outline-primary" title="Object download">Download ' + item.format.split("/").pop().toUpperCase() + '</a>';
         } else if (item.format.includes('record')) {
             itemDisplay = item === record ? '' : '<img class="w-25" src="{{ "/assets/lib/icons/" | relative_url }}{{ icons.icon-record }}.svg" alt="No preview found">';
-            itemDownload = findFileLink(item) != "" ? '<a href="' + findFileLink(item) + '" target="_blank" rel="noopener" class="btn btn-outline-primary" title="Object download">Link to Object</a>' : '';
+            itemDownload = findFileLink(item) != "" ? '<a href="' + findFileLink(item) + '" target="_blank" rel="noopener" class="btn btn-outline-primary" title="Object download">Enlace de la imagen</a>' : '';
         } else {
             /* fall back to no preview if it doesn't know the format */
             itemDisplay = '<img class="w-50" src="{{ "/assets/lib/icons/" | relative_url }}{{ icons.icon-default }}.svg" alt="No preview found">';
-            itemDownload = '<a href="' + findFileLink(item) + '" target="_blank" rel="noopener" class="btn btn-outline-primary" title="Object download">Download Object</a>';
+            itemDownload = '<a href="' + findFileLink(item) + '" target="_blank" rel="noopener" class="btn btn-outline-primary" title="Object download">Descargar Imagen</a>';
         }
         if (item === record) { itemImage = itemDisplay; }
     };
@@ -111,7 +111,7 @@ function displayItem(record, prev_id, next_id, compound_object) {
             } else {
                 itemYear = item.date;
             }
-            var timelineButton = '<a href="{{ "/timeline.html" | relative_url }}#y' + itemYear + '" class="btn btn-outline-primary">View on Timeline</a>';
+            var timelineButton = '<a href="{{ "/timeline.html" | relative_url }}#y' + itemYear + '" class="btn btn-outline-primary">Ver en Línea de Tiempo</a>';
             /* add timeline link to children only if specified in theme.yml */
             {% if site.data.theme.timeline-child-objects == true %}
                 itemLink += timelineButton;
@@ -123,7 +123,7 @@ function displayItem(record, prev_id, next_id, compound_object) {
         {% if stubs contains "map" %}
         /* add link to view on map */
         var itemMarker = item.parentid ? item.parentid : itemPageId;
-        var mapButton = '<a href="{{ '/map.html' | relative_url }}?location=' + item.latitude + ',' + item.longitude + '&marker=' + itemMarker +'" class="btn btn-outline-primary">View on Map</a>';
+        var mapButton = '<a href="{{ '/map.html' | relative_url }}?location=' + item.latitude + ',' + item.longitude + '&marker=' + itemMarker +'" class="btn btn-outline-primary">Ver en Mapa</a>';
         if (item.latitude && item.longitude) {
             /* add map link to children only if specified in theme.yml */
             {% if site.data.theme.map-child-objects == true %}
@@ -143,7 +143,7 @@ function displayItem(record, prev_id, next_id, compound_object) {
         /* set up grid system for compound object cards */
         itemImage = format.includes('compound_object') ? '<div class="row row-cols-2 row-cols-lg-4 g-2">' : "";
         /* set up download dropdown button for compound object page */
-        compoundDownload = '<div class="btn-group" role="group"><button class="btn btn-outline-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Download</button> <ul class="dropdown-menu">';
+        compoundDownload = '<div class="btn-group" role="group"><button class="btn btn-outline-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Descargar</button> <ul class="dropdown-menu">';
 
         /* generate a modal and card for each item in compound object */
         for (let i = 0; i < compoundItem.length; i++) {
@@ -218,7 +218,7 @@ function displayItem(record, prev_id, next_id, compound_object) {
                                                     <svg class="bi icon-sprite" role="img" aria-label="Previous Item">
                                                         <use xlink:href="{{ '/assets/lib/cb-icons.svg' | relative_url }}#arrow-left"/>
                                                     </svg>
-                                                    <span class="d-none d-md-inline">Previous Item</span>
+                                                    <span class="d-none d-md-inline">Anterior</span>
                                                 </button>
                                             </div>
                                             <div class="col-9 col-md-8 text-center">
@@ -229,7 +229,7 @@ function displayItem(record, prev_id, next_id, compound_object) {
                                             </div>
                                             <div class="col-1 col-md-2 text-end">
                                                 <button data-bs-target="#${itemNext}" data-bs-toggle="modal" onclick="window.location.hash='${itemNext}'" class="btn btn-outline-dark btn-sm next-child-button">
-                                                    <span class="d-none d-md-inline">Next Item</span>
+                                                    <span class="d-none d-md-inline">Próximo</span>
                                                     <svg class="bi icon-sprite" role="img" aria-label="Next Item">
                                                         <use xlink:href="{{ '/assets/lib/cb-icons.svg' | relative_url }}#arrow-right"/>
                                                     </svg>
@@ -390,7 +390,7 @@ function displayItem(record, prev_id, next_id, compound_object) {
         </div>`;
     /* add bottom buttons to page */
     document.getElementById("browse-buttons").innerHTML = `<a id="prev-button" class="btn btn-secondary" href="${backUrl}">&laquo; Previous</a>
-        <a class="btn btn-secondary" href="{{ '/browse.html' | relative_url }}">Back to browse</a>
+        <a class="btn btn-secondary" href="{{ '/browse.html' | relative_url }}">Volver a Navegar</a>
         <a id="for-button" class="btn btn-secondary" href="${forwardUrl}">Next &raquo;</a>`;
 
     /* add back forward key functionality for modal arrows */
