--- a/_includes/js/item-js.html
+++ b/_includes/js/item-js.html
@@ -36,7 +36,7 @@ function displayItem(record, prev_id, next_id, compound_object) {
         itemFormat = record.format.replace("_", " ").toUpperCase();
     }
     document.getElementById("item-format").innerHTML = itemFormat;
-    document.getElementById("item-title").innerHTML = record.format.includes('record') ? objectTitle : objectTitle + '<a href="#item-metadata" class="ms-5 btn btn-sm btn-outline-dark small">Información de la Obra <svg class="bi icon-sprite" role="img" aria-label="Jump to Item Info"><use xlink:href="{{ "/assets/lib/cb-icons.svg" | relative_url }}#arrow-down"/></svg></a>';
+    document.getElementById("item-title").innerHTML = record.format.includes('record') ? objectTitle : objectTitle + '<a href="#item-metadata" class="ms-5 btn btn-sm btn-outline-dark small">Información de la obra <svg class="bi icon-sprite" role="img" aria-label="Jump to Item Info"><use xlink:href="{{ "/assets/lib/cb-icons.svg" | relative_url }}#arrow-down"/></svg></a>';
     
     /* add object */ 
     var format = "" + record.format;
@@ -48,7 +48,7 @@ function displayItem(record, prev_id, next_id, compound_object) {
     function addItem(item) {
         if (item.format.includes('image')) {
             itemDisplay = '<a class="spotlight gallery-img" data-download="true" href="' + findFileLink(item) + '"><img class="img-fluid" src="' + findFileLink(item) + '" alt="' + item.title + '">';
-            itemDisplay += record.format.includes('multiple') ? '</a>' : '<div><small class="text-dark">Haga clic para ver en pantalla completa</small></div></a>';
+            itemDisplay += record.format.includes('multiple') ? '</a>' : '<div><small class="text-dark">Haga clic para ver la pantalla completa</small></div></a>';
             itemDownload = '<a href="' + findFileLink(item) + '" target="_blank" rel="noopener" class="btn btn-outline-primary" title="Object download">Download ' + item.format.split("/").pop().toUpperCase() + '</a>';
         } else if (item.format.includes('pdf')) {
             itemDisplay = '<div class="ratio ratio-4x3"><object title="PDF file of ' + item.title + '" data="' + findFileLink(item) + '" type="application/pdf" width="100%"><p>The PDF is not rendering in your browser. Please use the button below to download the PDF.</p></object></div>';
